--- a/event.html
+++ b/event.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
   <head>
-    <title>John Doe</title>
+    <title>Julian Jensen</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="awesome portfolio website, portfolio website, free website template, open source, open source website"/>
     <meta name="description" content="The open source project that takes care of showcasing your work while you focus on learning and innovation"/>
     <!--Favicon-->
-    <link id="favicon" rel="icon" href="assets/images/favicon.png" type="image/png" />
+    <link id="favicon" rel="icon" href="assets/images/fotoJJ.png" type="image/png" />
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6D61F5TL4"></script>
     <!-- Robot.txt -->
@@ -20,16 +20,7 @@
     <meta property="og:description" content="The open source project that takes care of showcasing your work while you focus on learning and innovation"/>
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/event.html"/>
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/event.html"/>
-    <!-- Twitter Cards-->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/research.html" />
-
-    <meta name="application-name" content="John Doe | Research" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Research" />
-    <meta
-      name="summary"
-      content="The open source project that takes care of showcasing your work while you focus on learning and innovation"
-    />
+    
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" />
